[gd_scene load_steps=4 format=3 uid="uid://c4hgf6w5v7jt5"]

[ext_resource type="Texture2D" uid="uid://chrouwubfwsk3" path="res://icon.svg" id="1_ow3g6"]
[ext_resource type="Script" uid="uid://div5btjapj2cp" path="res://scripts/dice_tile.gd" id="1_viie8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ow3g6"]
size = Vector2(153, 154)

[node name="DiceTile" type="Node2D"]
script = ExtResource("1_viie8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_ow3g6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_ow3g6")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
